...
                    carbsG: product.carbsGPer100g * scale, fatG: product.fatGPer100g * scale,
                    nutritionSource: product.nutritionSource, sortIndex: index)
            }
            return Meal(name: name, type: type, items: items)
        }
        return try [
            meal("Yoghurt med havre og bær", "frokost", [("01.011", 200), ("7044416013141", 60), ("06.502", 75), ("06.525", 100)]),
            meal("Grovbrød med ost", "frokost", [("05.342", 120), ("7038010053368", 40), ("06.010", 50)]),
            meal("Matpakke med makrell", "lunsj", [("05.342", 120), ("7039010016322", 80), ("06.010", 50), ("06.622", 150)]),
            meal("Knekkebrød med ost", "lunsj", [("7300400129459", 48), ("7038010053368", 40), ("06.069", 100), ("06.525", 120)]),
            meal("Laks med poteter", "middag", [("04.342", 180), ("06.262", 300), ("06.725", 150)]),
            meal("Kylling med ris", "middag", [("03.481", 180), ("05.337", 250), ("06.725", 150), ("06.524", 70)]),
            meal("Fredagstaco", "middag", [("05.381", 100), ("03.139", 120), ("7038010053368", 25), ("06.069", 80), ("06.736", 50), ("06.524", 60)]),
...
